Tue Aug 26 18:05:39 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/InfoRepo_population/pub.ini:

	  Resolve the merge conflict that I missed earlier.

        * performance-tests/DCPS/InfoRepo_population/publisher.cpp:
        * performance-tests/DCPS/InfoRepo_population/run_test.pl:

	  Extend diagnostic capabilities of the test.

Tue Aug 26 17:07:35 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * tests/DCPS/SetQosPartition/pub.ini:
        * tests/DCPS/SetQosPartition/sub.ini:

          Set keep_link=0 for regression as we continue to work on this
          branch.

Tue Aug 26 15:38:50 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        Merging trunk changes 1301:1345 out to branch.

        Tue Aug 26 06:32:05 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/StringKey/pub.ini:
        * tests/DCPS/StringKey/sub.ini:

          Added missing files.

        Mon Aug 25 17:53:30 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/StringKey/DataReaderListener.h:
        * tests/DCPS/StringKey/DataReaderListener.cpp:
        * tests/DCPS/StringKey/Messenger.idl:
        * tests/DCPS/StringKey/StringKey.mpc:
        * tests/DCPS/StringKey/Writer.h:
        * tests/DCPS/StringKey/Writer.cpp:
        * tests/DCPS/StringKey/domain_ids:
        * tests/DCPS/StringKey/publisher.cpp:
        * tests/DCPS/StringKey/run_test.pl:
        * tests/DCPS/StringKey/subscriber.cpp:
        * tests/DCPS/StringKey/tcp.conf:

          Added new test to detect incorrect String_Manager comparison
          that cause multiple instances created for same string key.

        * bin/dcps_tests.lst:

          Added StringKey test.

        Thu Jul 31 16:23:14 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketSender.cpp:

          In the open() method, return false on error instead of -1 (true).
